tests/neg-custom-args/captures/sep-consume.check
-- Error: tests/neg-custom-args/captures/sep-consume.scala:19:2 --------------------------------------------------------
Separation failure: Illegal access to (x : Ref^), which was passed as a consume parameter to method bad
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of parameter x
18 |  val rx: () => Unit = bad(f)  // hides x.rd in the resulting `cap`
   |                           -
   |                           The capability was consumed here.
19 |  x.put(42)  // error
   |  ^
   |  Then, it was used here

-- Error: tests/neg-custom-args/captures/sep-consume.scala:21:16 -------------------------------------------------------
Separation failure: Illegal access to (x : Ref^), which was passed as a consume parameter to method bad
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of parameter x
18 |  val rx: () => Unit = bad(f)  // hides x.rd in the resulting `cap`
   |                           -
   |                           The capability was consumed here.
19 |  x.put(42)  // error
20 |  x.get      // ok rd/rd
21 |  par(rx, () => x.put(42))  // error
   |                ^
   |                Then, it was used here

-- Error: tests/neg-custom-args/captures/sep-consume.scala:26:16 -------------------------------------------------------
26 |  def foo = bad(f) // error
   |                ^
   |  Separation failure: argument to consume parameter with type (f : () ->{x.rd} Unit) refers to non-local value f
